--- a/Courses/DataBase/数据库第一次总概括摘记点.md
+++ b/Courses/DataBase/数据库第一次总概括摘记点.md
@@ -1,10 +1,8 @@
 ### 数据库第一次总概括摘记点
 
-https://www.bilibili.com/video/BV1P5411e7rU?p=10
+[TOC]
 
-https://www.bilibili.com/video/BV1ct411G78W?from=search&seid=2232511821826680259
 
-https://search.bilibili.com/all?keyword=SQL%E8%AF%AD%E5%8F%A5&from_source=nav_suggest_new
 
 ### 简单SQL语句
 
@@ -983,6 +981,14 @@ create assertion credits_earned_constraint check
                 where student.ID = takes.ID and grade is not null and grade < > ‘F’)
      //检查了学生不挂科，并且保证所选课程与记录的一致
 ```
+
+#### 附加的练习用视频网站
+
+>https://www.bilibili.com/video/BV1P5411e7rU?p=10
+>
+>https://www.bilibili.com/video/BV1ct411G78W?from=search&seid=2232511821826680259
+>
+>https://search.bilibili.com/all?keyword=SQL%E8%AF%AD%E5%8F%A5&from_source=nav_suggest_new
 
 
 
